# StockAnalysisSkill

./: .env.example  .gitignore  AI_SETUP.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml  stock-analysis-skill.md  stock-analysis.js
config/: global.yaml  market_rules.yaml  tools.yaml
config/agents/: stage1.yaml  stage2.yaml  stage3.yaml  stage4.yaml
docs/: README.md
docs/backtest/: 回测系统设计.md
docs/data/: 01_数据源规范.md  02_数据清洗规范.md  03_计算引擎规范.md
docs/market_rules/: A股交易规则.md  港股交易规则.md  美股交易规则.md
docs/prompts/: global_rules.md  stage1_01_技术分析师.md  stage1_02_基本面分析师.md  stage1_03_市场微观结构分析师.md  stage1_04_市场情绪分析师.md  stage1_05_板块轮动分析师.md  stage1_06_资讯事件分析师.md  stage1_07_宏观分析师.md  stage2_01_看涨分析师.md  stage2_02_看跌分析师.md  stage2_03_研究主管.md  stage2_04_交易计划师.md  stage3_03_激进风控师.md  stage3_04_保守风控师.md  stage3_05_量化风控师.md  stage3_06_首席风控官.md  stage4_01_投资顾问.md
docs/tools/: 01_工具架构设计.md  02_数据工具配置.md  03_风控计算模块.md
scripts/: start.sh  start_service.py  stop.sh  stop_service.py
skills/: README.md
src/: config.py  logging_config.py  main.py
src/agents/: base_agent.py  config_loader.py  llm_client.py  registry.py  skills_loader.py
src/api/: app.py
src/core/: models.py  scheduler.py  task_queue.py  task_store.py
src/data/: akshare_adapter.py  calculator.py  cleaner.py  hk_stock_adapter.py  macro_adapter.py  market_router.py  market_rules.py  tushare_adapter.py  unified_fetch.py  us_stock_adapter.py
src/pipeline/: orchestrator.py  stage1.py  stage2.py  utils.py  (+2 more)
tests/: conftest.py  test_api_tasks.py  test_logging_config.py  test_models.py  test_task_store.py
(+22 files in other folders)
